--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sos-calling-out",
+  "name": "sos_app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,12 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
+    "expo-localization": "~13.1.0",
     "expo-status-bar": "~1.4.0",
+    "i18n-js": "^4.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7"
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7",
+    "expo-location": "~14.3.0",
+    "react-native-maps": "0.31.1",
+    "expo-contacts": "~10.3.0",
+    "expo-sms": "~10.2.0",
+    "expo-linking": "~3.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
